# job-assistant

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  pyproject.toml
.github/scripts/: commit-db.sh
.github/workflows/: bot.yml  ci.yml  collect.yml  weekly.yml
config/: config.example.yaml  config.yaml
data/: jobs.db
docs/: CLAUDE.md  DECISIONS.md  PROJECT_REPORT.md  PROJECT_STATE.md  project-vision.md
docs/superpowers/plans/: 2026-06-30-job-assistant-buildout.md
src/job_assistant/: __init__.py  ai.py  cli.py  config.py  models.py  pipeline.py  scheduler.py
src/job_assistant/db/: __init__.py  repository.py  schema.sql
src/job_assistant/filtering/: __init__.py  dedup.py  experience.py  filters.py
src/job_assistant/sources/: __init__.py  base.py  comeet.py  greenhouse.py  jobicy.py  lever.py  linkedin_email.py  registry.py  remotive.py  weworkremotely.py
src/job_assistant/summary/: __init__.py  weekly.py
src/job_assistant/telegram/: __init__.py  (+5 more)
tests/: conftest.py  test_ai.py  test_base.py  test_cli.py  test_comeet.py  test_config.py  test_diag.py  test_experience.py  test_filters.py  test_formatting.py  test_greenhouse_isolation.py  test_handlers.py  test_jobicy.py  test_lever_isolation.py  test_linkedin.py  test_pagination.py  test_pipeline.py  test_remotive_isolation.py  test_repository.py  test_scheduler.py  test_sources.py  test_weekly.py  test_weworkremotely_isolation.py
tests/fixtures/: comeet.json  greenhouse.json  jobicy.json  lever.json  linkedin_alert.html  remotive.json  weworkremotely.rss
