[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-assistant"
version = "1.0.0"
description = "Personal job-finding assistant: collects, filters, and delivers job postings to Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",       # IANA tz database (zoneinfo has none on Windows)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ai = [
    "anthropic>=0.40",       # only needed when the optional AI layer is enabled
]

[project.scripts]
job-assistant = "job_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_assistant = ["db/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
